[package]
name = "rogue-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
eaccess = { path = "../rogue-eaccess", package = "rogue-eaccess" }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

